Port to Mirage, get the Interpreter to run a step
- Move flathead code to lib/
- Move story file to stories/ for use with KV_RO
- Add config.ml, unikernel.ml. Doesn't do much yet.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,18 @@ setup.log
 
 # savegame
 FLATHEAD.SAV
+
+# mirage-specific
+.mirage.config
+*.hvt
+*.spt
+*.virtio
+*.muen
+*.genode
+*.xen
+key_gen.ml
+main.ml
+*.opam
+myocamlbuild.ml
+static*.ml
+static*.mli
